# rusty-live-server

./: Cargo.toml  README.md
.github/workflows/: push.yml
html/: index.html
src/: fs.rs  lib.rs  main.rs  routing.rs  signal.rs  updater.js  websocket.rs
